# telegram_agent

./: .gitignore  DATA_MODEL.md  PRODUCT_GAP_ANALYSIS.md  README.md  Updated_Implementation_Plan.md  architecture.md  data_flow.md  dealwing-status.md  docker-compose.yml  implementation_order.md  pre-deployment.md  render.yaml  save-telegram.md
be/: .env.example  Dockerfile  _probe_feed.py  pyproject.toml  railway.json  requirements.txt
be/scripts/: _audit_common.py  audit_analytics.py  audit_competitor_trends.py  audit_day.py  audit_plan.py  backfill_competitor_categories.py  backfill_outcomes.py  cleanup_self_merchant.py  collect_data.py  reset_db.py  test_competitor_source.py
be/src/: __init__.py  __main__.py  cli.py  main.py
be/tests/: test_affiliate_grabon.py  test_ai_context_planning.py  test_ai_execution.py  test_ai_factcheck.py  test_ai_planner.py  test_analytics_views.py  test_auto_discover_toggle.py  test_backtest.py  test_broadcast_stats.py  test_campaign_plan_columns.py  test_comparison_window_mismatch.py  test_competitor_columns.py  test_competitor_crud.py  test_competitor_fetch_fix.py  test_competitor_intel_ordering.py  test_competitor_intel_upsert.py  test_competitor_onboarding.py  test_competitor_scheduler_unify.py  test_competitor_trends.py  test_context_report_getters.py  test_daily_brief_cache.py  test_daily_report_aggregator.py  test_daily_report_job.py  test_daily_report_model.py  test_daily_subscriber_stat.py  test_daily_weekly_plan_integration.py  test_dashboard_api.py  test_deal_scoring.py  test_digest_service.py  test_discovery_verifier.py  (+31 more)
(+350 files in other folders)
