[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dealwing-backend"
version = "1.0.0"
description = "DealWing — Telegram deal-channel growth OS (FastAPI backend)"
requires-python = ">=3.10"
dependencies = [
    "telethon==1.36.0",
    "httpx==0.27.2",
    "h2>=4.1.0",
    "beautifulsoup4==4.12.3",
    "tldextract>=5.1.2",
    "SQLAlchemy>=2.0.43",
    "alembic>=1.14.0",
    "APScheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "typer>=0.15.1",
    "rich>=13.9.4",
    "groq>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
tgagent = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
